# prism-lang

./: Cargo.toml
benches/: bytecode_bench.rs
examples/: main.prism
src/: ast.rs  bytecode.rs  call_frame.rs  compiler.rs  interpreter.rs  lib.rs  main.rs  native_func.rs  not_interpreter.rs  test.prism  token.rs  vm.rs
tests/: test.prism
