[package]
name = "prism-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = { version = "0.5.0", features = ["derive"] }
logos = "0.14.0"
string-interner = {version = "0.17.0", default-features = false, features = ["backends", "inline-more"] }
